Changes project structure to have a testproject instead of demoproject.

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,6 @@ envlist = py26, py27, py33
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/sieve
-commands = python runtests.py
+commands = python sieve/testproject/manage.py test
 deps =
     -r{toxinidir}/requirements-test.txt
