--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,11 @@ python:
   - "2.6"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements-test.txt
+install: 
+  - pip install -r requirements-test.txt
+  - pip install coveralls
 
 # command to run tests, e.g. python setup.py test
-script: python runtests.py
+script: python sieve/testproject/manage.py test
+
+after_success: coveralls
